[gd_scene load_steps=7 format=2]

[ext_resource path="res://laul.mp3" type="AudioStream" id=1]
[ext_resource path="res://Node.gd" type="Script" id=2]
[ext_resource path="res://taust.jpg" type="Texture" id=3]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true

[node name="Punktid" type="RichTextLabel" parent="TextureRect"]
margin_left = 330.0
margin_top = 38.0
margin_right = 690.0
margin_bottom = 118.0
custom_fonts/normal_font = SubResource( 1 )
text = "KIVI-PABER-KÄÄRID"

[node name="Tulemus" type="RichTextLabel" parent="TextureRect"]
margin_left = 334.0
margin_top = 176.0
margin_right = 708.0
margin_bottom = 290.0
custom_fonts/normal_font = SubResource( 1 )

[node name="punktid2" type="RichTextLabel" parent="TextureRect"]
margin_left = 791.0
margin_top = 35.0
margin_right = 984.0
margin_bottom = 104.0
custom_fonts/normal_font = SubResource( 1 )

[node name="punktid1" type="RichTextLabel" parent="TextureRect"]
margin_left = 40.0
margin_top = 46.0
margin_right = 249.0
margin_bottom = 120.0
custom_fonts/normal_font = SubResource( 1 )

[node name="VALIK1" type="RichTextLabel" parent="TextureRect"]
margin_left = 114.0
margin_top = 294.0
margin_right = 373.0
margin_bottom = 418.0
custom_fonts/normal_font = SubResource( 1 )

[node name="VALIK2" type="RichTextLabel" parent="TextureRect"]
margin_left = 664.0
margin_top = 287.0
margin_right = 923.0
margin_bottom = 411.0
custom_fonts/normal_font = SubResource( 1 )

[node name="paber" type="Button" parent="TextureRect"]
margin_left = 206.0
margin_top = 504.0
margin_right = 354.0
margin_bottom = 562.0
custom_fonts/font = SubResource( 2 )
text = "paber"

[node name="KIVI" type="Button" parent="TextureRect"]
margin_left = 363.0
margin_top = 504.0
margin_right = 511.0
margin_bottom = 562.0
custom_fonts/font = SubResource( 2 )
text = "kivi"

[node name="kaarid" type="Button" parent="TextureRect"]
margin_left = 49.0
margin_top = 505.0
margin_right = 197.0
margin_bottom = 563.0
custom_fonts/font = SubResource( 2 )
text = "kaarid"

[node name="restard" type="Button" parent="TextureRect"]
margin_left = 427.0
margin_top = 101.0
margin_right = 600.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 2 )
text = "UUS MÄNG"

[node name="raha" type="RichTextLabel" parent="TextureRect"]
margin_left = 411.0
margin_top = 380.0
margin_right = 613.0
margin_bottom = 450.0
custom_fonts/normal_font = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 1.0
autoplay = true

[connection signal="pressed" from="TextureRect/paber" to="." method="_on_paber_pressed"]
[connection signal="pressed" from="TextureRect/KIVI" to="." method="_on_KIVI_pressed"]
[connection signal="pressed" from="TextureRect/kaarid" to="." method="_on_kaarid_pressed"]
[connection signal="pressed" from="TextureRect/restard" to="." method="_on_restard_pressed"]
